inte multiplikation som standard

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<div class="inst-rad">
 				<label>Multiplikation</label>
-				<input type="checkbox" name="max-num" checked oninput="multiply = this.checked; createEq(); displayEq();">
+				<input type="checkbox" name="max-num" oninput="multiply = this.checked; createEq(); displayEq();">
 			</div>
 
 		</div>
