--- a/multitest1/index.html
+++ b/multitest1/index.html
@@ -16,38 +16,56 @@
 	</head>
 	<body>
 
-		<div id="start">
-			<button onclick="start()">Start</button>
+		<div id="stats">
+			<span id="big-stats">Fig sak: 99R 99F</span>
+			<span id="top-stats">Eq sak: 99R 99F</span>
+			<span id="bot-stats">Dub sak: 99R 99F</span>
 		</div>
-		<progress id="timer" value="0" max="300"></progress>
 
-		<div id="big-col">
+		<div id="main">
+			<div id="start">
+				<button onclick="start()">Start</button>
+			</div>
+			<progress id="timer" value="0" max="300"></progress>
 
-			<div id="top-row">
-				<img src="square.png">
-				<img src="triangle.png">
-				<img src="six.png">
-				<img src="romb.png">
-				<img src="circle.png">
+			<div id="big-col">
+
+				<div id="top-row">
+					<img src="square.png">
+					<img src="triangleR.png">
+					<img src="six.png">
+					<img src="romb.png">
+					<img src="circle.png">
+				</div>
+
+				<div id="road">
+					<img id="flag" src="square.png">
+				</div>			
+
+				<biv id="bottom-row">
+					<button onclick="chooseLeft()"><<<</button>
+					<button onclick="chooseRight()">>>></button>
+				</biv>
+
 			</div>
 
-			<div id="road">
-				<img id="flag" src="square.png">
-			</div>			
+			<div id="top-col">
+				<span class="display-num" id="eq-num">1+1=2</span>
 
-			<biv id="bottom-row">
-				<button onclick="chooseLeft()"><<<</button>
-				<button onclick="chooseRight()">>>></button>
-			</biv>
+				<button onclick="checkEq(true)">correct</button>
 
-		</div>
+				<button onclick="checkEq(false)">wrong</button>
+			</div>
 
-		<div id="top-col">
+			<div id="bot-col">
 
-		</div>
+				<span class="display-num" id="dub-num">0 1 2 3 4 5 6 7 8 9</span>
 
-		<div id="bot-col">
+				<button onclick="guessDubNum(true)">duplicate</button>
 
+				<button onclick="guessDubNum(false)">no duplicate</button>
+
+			</div>
 		</div>
 
 	</body>
