--- a/fly/index.html
+++ b/fly/index.html
@@ -19,7 +19,21 @@
 
 		<div id="main-container">
 
-			
+			<div id="target-number"><span>-</span></div>
+
+			<div id="path">
+				<div id="pointer"></div>
+			</div>
+
+			<div id="container-numbers">
+
+				<button onclick="">1</button>
+
+				<button onclick="">2</button>
+
+				<button onclick="">3</button>
+
+			</div>
 
 		</div>
 
