--- a/compare/index.html
+++ b/compare/index.html
@@ -21,11 +21,11 @@
 
 			<div id="spot-container">
 				<div class="row">
-					<span id="spot-one">ABCDEFG</span>
+					<p id="spot-one">ABCDEFG</p>
 				</div>
 				
 				<div class="row">
-					<span id="spot-two">ABCDEFG</span>
+					<p id="spot-two">ABCDEFG</p>
 				</div>
 			</div>
 			
