--- a/compare/index.html
+++ b/compare/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="shortcut icon" type="image/ico" href="../favicon.ico"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 		<title>Compare string</title>
 		<meta charset="utf-8">
