--- a/multitest1/index.html
+++ b/multitest1/index.html
@@ -5,7 +5,7 @@
   src="https://code.jquery.com/jquery-3.4.0.min.js"
   integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
   crossorigin="anonymous"></script>
-		<link rel="shortcut icon" type="image/png" href="../favicon.png"/>
+		<link rel="shortcut icon" type="image/ico" href="../favicon.ico"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 		<title>Multitask träning 1</title>
 		<meta charset="utf-8">
