--- a/fly/index.html
+++ b/fly/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 
-		<button id="start" onclick="startTimer()">Starta</button>
+		<button id="start" onclick="start()">Starta</button>
 
 		<div id="score-container">
 
@@ -28,11 +28,11 @@
 
 			<div id="container-numbers">
 
-				<button onclick="">1</button>
+				<button disabled="true" onclick="guess(1)">1</button>
 
-				<button onclick="">2</button>
+				<button disabled="true" onclick="guess(2)">2</button>
 
-				<button onclick="">3</button>
+				<button disabled="true" onclick="guess(3)">3</button>
 
 			</div>
 
