--- a/fly/index.html
+++ b/fly/index.html
@@ -18,6 +18,10 @@
 
 		</div>
 
+		<div id="timer-container">
+
+		</div>
+
 		<div id="main-container">
 
 			<div id="target-number"><span>-</span></div>
