--- a/compare/index.html
+++ b/compare/index.html
@@ -14,6 +14,10 @@
 
 		<button id="start" onclick="startTimer()">Starta</button>
 
+		<div id="option-container">
+			<label><input id="constant-length" type="checkbox">Bara längden 7</label>
+		</div>
+
 		<div id="score-container">
 
 		</div>
