--- a/fly/index.html
+++ b/fly/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="shortcut icon" type="image/ico" href="../favicon.ico"/>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-		<title>Flyg runt</title>
+		<title>FLAGGAAAAAA</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
